--- a/PyTorch seq2seq tutorial with g2p.ipynb
+++ b/PyTorch seq2seq tutorial with g2p.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -58,7 +58,7 @@
        "'1.0.1'"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -132,7 +132,7 @@
        " ['R', 'IH0', 'F', 'Y', 'UW1', 'Z']]"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -206,8 +206,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "e p i t a p h s\n",
-      "EH1 P AH0 T AE2 F S\n"
+      "c l o w a r d\n",
+      "K L OW1 W ER0 D\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,13 +253,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def encode(inp, type, dict):\n",
     "    '''type: \"x\" or \"y\"'''\n",
-    "#     inp_str = inp.decode(\"utf-8\")\n",
     "    if type==\"x\": tokens = inp.split() + [\"</s>\"]\n",
     "    else: tokens = [\"<s>\"] + inp.split() + [\"</s>\"]\n",
     "\n",
@@ -269,11 +268,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class G2pDataset(Dataset):\n",
+    "class G2pDataset(data.Dataset):\n",
     "\n",
     "    def __init__(self, words, prons):\n",
     "        \"\"\"\n",
@@ -301,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,13 +315,13 @@
     "    x_maxlen = np.array(x_seqlens).max()\n",
     "    y_maxlen = np.array(y_seqlens).max()\n",
     "    \n",
-    "    f = lambda x, seqlen: [sample[x]+[0]*(seqlen-len(sample[x])) for sample in batch]\n",
-    "    x = f(0, x_maxlen)\n",
+    "    f = lambda x, maxlen, batch: [sample[x]+[0]*(maxlen-len(sample[x])) for sample in batch]\n",
+    "    x = f(0, x_maxlen, batch)\n",
     "    decoder_inputs = f(3, y_maxlen)\n",
-    "    y = f(4, y_maxlen)\n",
+    "    y = f(4, y_maxlen, batch)\n",
     "    \n",
     "    f = torch.LongTensor\n",
-    "    return f(x), f(x_seqlens), words, f(decoder_inputs), f(y), f(y_seqlens), prons"
+    "    return f(x), x_seqlens, words, f(decoder_inputs), f(y), y_seqlens, prons"
    ]
   },
   {
@@ -337,11 +336,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def one_hot(batch, depth):\n",
+    "    '''\n",
+    "    batch: (N, T)\n",
+    "    depth: scalar\n",
+    "    Returns\n",
+    "    (N, T, depth)\n",
+    "    '''\n",
     "    emb = nn.Embedding(depth, depth)\n",
     "    emb.weight.data = torch.eye(depth)\n",
     "    return emb(batch)"
@@ -349,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,8 +365,7 @@
     "        self.hidden_units = hidden_units\n",
     "        self.rnn = nn.GRU(len(g2idx), hidden_units, batch_first=True)\n",
     "        \n",
-    "    def forward(self, xs):\n",
-    "        x, seqlens, words = xs\n",
+    "    def forward(self, x, seqlens):\n",
     "        x = one_hot(x, len(self.g2idx))\n",
     "        \n",
     "        seqlens = torch.IntTensor(seqlens)\n",
@@ -379,10 +383,103 @@
     "        last_hidden = last_hidden.permute(1, 2, 0)\n",
     "        last_hidden = last_hidden.view(last_hidden.size()[0], -1)\n",
     "        last_hidden = last_hidden[unperm_idx]\n",
-    "            \n",
     "        \n",
-    "        return last_hidden, words\n",
+    "        return last_hidden\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Decoder():\n",
+    "    def __init__(self, hidden_units):\n",
+    "        super().__init__()\n",
+    "        self.g2idx, self.idx2g, self.p2idx, self.idx2p = load_vocab()\n",
+    "        self.hidden_units = hidden_units\n",
+    "        self.rnn = nn.GRU(len(p2idx), hidden_units, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_units, len(self.p2idx))\n",
+    "        \n",
+    "    def forward(self, decoder_inputs, h0):\n",
+    "        decoder_inputs = one_hot(decoder_inputs, len(self.g2idx))\n",
+    "           \n",
+    "        outputs, last_hidden = self.rnn(decoder_inputs, h0)\n",
+    "        logits = self.fc(outputs) # (N, T, V)\n",
+    "        y_hat = logits.argmax(-1)\n",
+    "        \n",
+    "        return logits, y_hat, last_hidden\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "HA39FU4-73-O"
+   },
+   "outputs": [],
+   "source": [
+    "class Net(nn.Module):\n",
+    "    def __init__(self, encoder, decoder, device):\n",
+    "        self.g2idx, self.idx2g, self.p2idx, self.idx2p = load_vocab()\n",
+    "        \n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "        self.device = device\n",
+    "    \n",
+    "    def forward(self, x, seqlens, decoder_inputs):\n",
+    "        \n",
+    "        last_hidden = self.encoder(x, seqlens)\n",
+    "        h0 = last_hidden\n",
+    "        \n",
+    "        Logits, Y_hat = [], []\n",
+    "        for t in range(maxlen):\n",
+    "            logits, y_hat, h0 =self.decoder(decoder_inputs[:, t:t+1, :], h0) # logits: (N, 1, V), y_hat: (N, 1)\n",
+    "            Logits.append(logits)\n",
+    "            Y_hat.append(y_hat)\n",
+    "            if y_hat.sum(1)==0: break # all samples reach padding.\n",
+    "        \n",
+    "        Logits = torch.cat(Logits, 1)\n",
+    "        Y_hat = torch.cat(Y_hat, 1)\n",
+    "        \n",
+    "        return Logits, Y_hat\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train % Eval functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, iterator, optimizer, criterion):\n",
+    "    model.train()\n",
+    "    for i, batch in enumerate(iterator):\n",
+    "        x, x_seqlens, words, decoder_inputs, y, y_seqlens, prons = batch\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        logits, y_hat = model(x, x_seqlens, decoder_inputs)\n",
+    "        \n",
+    "        # calc loss\n",
+    "        logits = logits.view(-1, logits.shape[-1]) # (N*T, VOCAB)\n",
+    "        y = y.view(-1) # (N*T,)\n",
+    "        loss = criterion(logits, y)\n",
+    "        loss.backward()\n",
+    "        \n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        if i and i%10==0:\n",
+    "            print(\"step: {i}, loss: {loss.item()}\")\n",
+    "        "
    ]
   },
   {
@@ -391,87 +488,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Decoder():\n",
-    "    pass\n",
+    "def eval(model, iterator, f):\n",
+    "    model.eval()\n",
     "\n",
-    "class Net():\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 307,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "HA39FU4-73-O"
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'tf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-307-a1af65aec9b8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset_default_graph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mNet\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mg2idx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0midx2g\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mp2idx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0midx2p\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_vocab\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparams\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'tf' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "tf.reset_default_graph()\n",
-    "class Net:\n",
-    "    def __init__(self, params):\n",
-    "        self.g2idx, self.idx2g, self.p2idx, self.idx2p = load_vocab()\n",
-    "        self.params = params\n",
-    "    \n",
-    "    def encode(self, xs):\n",
-    "        '''\n",
-    "        xs: tupple of \n",
-    "            x: (N, T)\n",
-    "            seqlens: (N,)\n",
-    "            word: (N,)\n",
-    "            \n",
-    "        returns last hidden state of shape (N, hidden_units)    \n",
-    "        '''\n",
-    "        with tf.variable_scope(\"encode\"):\n",
-    "            x, seqlens, words = xs\n",
-    "            x = tf.one_hot(x, len(self.g2idx))\n",
-    "            cell = tf.contrib.rnn.GRUCell(self.params[\"hidden_units\"])\n",
-    "            outputs, last_hidden = tf.nn.dynamic_rnn(cell, x, seqlens, dtype=tf.float32)\n",
-    "        \n",
-    "        return last_hidden, words\n",
-    "        \n",
-    "    \n",
-    "    def decode(self, ys, h0=None):\n",
-    "        '''\n",
-    "        ys: tupple of\n",
-    "            decoder_inputs: (N, T)\n",
-    "            y: (N, T)\n",
-    "            seqlens: (N,)\n",
-    "            pron: (N,)\n",
-    "            \n",
-    "        returns last hidden state of shape (N, hidden_units)  \n",
-    "        '''\n",
-    "        decoder_inputs, y, seqlens, prons = ys\n",
-    "            \n",
-    "        with tf.variable_scope(\"decode\"):\n",
-    "            inputs = tf.one_hot(decoder_inputs, len(self.p2idx))\n",
-    "            cell = tf.contrib.rnn.GRUCell(self.params[\"hidden_units\"])\n",
-    "            outputs, _ = tf.nn.dynamic_rnn(cell, inputs, initial_state=h0, dtype=tf.float32)\n",
+    "    Words, Is_heads, Tags, Y, Y_hat = [], [], [], [], []\n",
+    "    with torch.no_grad():\n",
+    "        for i, batch in enumerate(iterator):\n",
+    "            x, x_seqlens, words, decoder_inputs, y, y_seqlens, prons = batch\n",
     "\n",
-    "            # projection\n",
-    "            logits = tf.layers.dense(outputs, len(self.p2idx))\n",
-    "            preds = tf.to_int32(tf.argmax(logits, axis=-1))\n",
-    "        \n",
-    "        return logits, preds, y, prons\n",
-    "        \n",
-    "    \n",
-    "    def forward(self, xs, ys):\n",
-    "        last_hidden, word = self.encode(xs)\n",
-    "        logits, preds, y, prons = self.decode(ys, h0=last_hidden)\n",
-    "        return word, logits, preds, y, prons"
+    "            logits, y_hat = model(x, x_seqlens, decoder_inputs)\n",
+    "\n",
+    "            Words.extend(words)\n"
    ]
   },
   {
@@ -486,15 +513,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_dataset = G2pDataset(train_words, train_prons)\n",
     "eval_dataset = G2pDataset(eval_words, eval_prons)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=hp.batch_size, shuffle=True, collate_fn=pad)\n",
-    "eval_loader = DataLoader(eval_dataset, batch_size=hp.batch_size, shuffle=False, collate_fn=pad)\n",
+    "train_loader = data.DataLoader(train_dataset, batch_size=hp.batch_size, shuffle=True, collate_fn=pad)\n",
+    "eval_loader = data.DataLoader(eval_dataset, batch_size=hp.batch_size, shuffle=False, collate_fn=pad)\n",
     "\n",
     "train_iter = iter(train_loader)\n",
     "eval_iter = iter(eval_loader)"
@@ -502,42 +529,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 294,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(train_iter.next())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "iL3CK4NW73-g"
-   },
    "outputs": [],
    "source": [
-    "# create a iterator of the correct shape and type\n",
-    "iter = tf.data.Iterator.from_structure(train_batches.output_types, eval_batches.output_shapes)\n",
-    "xs, ys = iter.get_next()\n",
-    "\n",
-    "# create the initialisation operations\n",
-    "train_init_op = iter.make_initializer(train_batches)\n",
-    "eval_init_op = iter.make_initializer(eval_batches)\n",
-    "train_iter.get_next()"
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ]
   },
   {
@@ -568,10 +564,11 @@
     }
    ],
    "source": [
-    "model = Model(params)\n",
+    "model = Net(params)\n",
     "model.train()\n",
+    "model.to(device)\n",
     "\n",
-    "for \n",
+    "for i, batch in enumerate()\n",
     "words, logits, preds, y, prons = m.forward(xs, ys)\n",
     "\n",
     "# train\n",
